--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
         <div class="content text-center text-md-right ">
             <img class="logo" src="Images/logo.svg" alt="Logo">
-                <h1>John Doe</h1>
+                <h1>Nawon Lee</h1>
                 <span class="text description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Class of '24 (Computer Science, Biology) at Williams College
                 </span>
                 <span class="text small-heading">FOLLOW ME ON</span>
                 <div class="icons d-flex justify-content-center justify-content-md-end">
