--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <a class="social-icon" href="https://dribbble.com/vyshnav_" ><img src="Icons/dribbble.svg" alt="Dribbble"></a>
                 <a class="social-icon" href="https://instagram.com/vyshnavgangadharan" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
-                <span class="text small-heading">LIKE MY WORK</span>
-                <button type="button" class="btn btn-outline-dark">Hire Me</button>
+                <span class="text small-heading">EXPLORE MY WORK</span>
+                <button type="button" class="btn btn-outline-dark">Download Resume</button>
     </div>
 </div>
 </div>
