--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img class="logo" src="Images/memoji.jpeg" alt="Logo" style="width:200px;height:266px;">
                 <h1>Nawon Lee</h1>
                 <span class="text description">
-                    Class of '24 at Williams College B.A. in Computer Science, Biology
+                    Class of '24 @Williams College B.A. in Computer Science, Biology
                 </span>
                 <span class="text small-heading">FOLLOW ME ON</span>
                 <div class="icons d-flex justify-content-center justify-content-md-end">
