--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <img class="logo" src="Images/memoji.jpeg" alt="Logo" style="width:200px;height:266px;">
                 <h1>Nawon Lee</h1>
                 <span class="text description">
-                    Class of '24 @Williams College B.A. in Computer Science, Biology
+                    Class of '24 @Williams College 
+                    <br>B.A. in Computer Science, Biology
                 </span>
                 <span class="text small-heading">FOLLOW ME ON</span>
                 <div class="icons d-flex justify-content-center justify-content-md-end">
@@ -34,6 +35,42 @@
                 <button type="button" class="btn btn-outline-dark">Download Resume</button>
     </div>
 </div>
+</div>
+
+<div class="timeline">
+  <div class="outer">
+    <div class="card">
+      <div class="info">
+        <h3 class="title">Title 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="info">
+        <h3 class="title">Title 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="info">
+        <h3 class="title">Title 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="info">
+        <h3 class="title">Title 4</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="info">
+        <h3 class="title">Title 5</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+  </div>
+    
 </div>
 
 
