--- a/index.html
+++ b/index.html
@@ -37,7 +37,25 @@
 </div>
 </div>
 </div>
+    
+<!-- timeline -->
+    <div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <h2>2017</h2>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2016</h2>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+</div>
 
+    
 </body>
+
 
 </html>
