--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="social-icon" href="https://instagram.com/vyshnavgangadharan" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
-                <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> 
+                <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
                 <button type="button" class="btn btn-outline-dark">Download Resume</button>
     </div>
 </div>
