--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="row height-100">
     <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
         <div class="content text-center text-md-right ">
-            <img class="logo" src="Images/IMG_8196.jpeg" alt="Logo"> <!--style="width:198px;height:274px;"-->
+            <img class="logo" src="Images/IMG_8196.jpeg" alt="Logo" style='height: 25%; width: auto; object-fit: contain'/>> 
+            <!--style="width:198px;height:274px;"-->
                 <h1>Nawon Lee</h1>
                 <span class="text description">
                     Class of '24 @Williams College 
