--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="social-icon" href="https://github.com/24nl12" ><img src="Icons/github.svg" alt="Github"></a>
                 <a class="social-icon" href="mailto:nl12@williams.edu" ><img src="Icons/at-sign.svg" alt="Mail"></a>
                 <a class="social-icon" href="https://dribbble.com/vyshnav_" ><img src="Icons/dribbble.svg" alt="Dribbble"></a>
-                <a class="social-icon" href="https://instagram.com/vyshnavgangadharan" ><img src="Icons/instagram.svg" alt="Instagram"></a>
+                <a class="social-icon" href="https://instagram.com/_nawon" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
