--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row height-100">
     <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
         <div class="content text-center text-md-right ">
-            <img class="logo" src="Images/IMG_8196.jpeg" alt="Logo" style='height: 30%; width: auto; object-fit: cover'/> 
+            <img class="logo" src="Images/IMG_8196.jpeg" alt="Logo" style='height: 274px; width: auto; object-fit: cover'/> 
             <!--style="width:198px;height:274px;"-->
                 <h1>Nawon Lee</h1>
                 <span class="text description">
