--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="social-icon" href="https://www.linkedin.com/in/24nl12" ><img src="Icons/linkedin_dark.png" alt="LinkedIn" style="width:23px;height:23px;"></a>
                 <a class="social-icon" href="https://github.com/24nl12" ><img src="Icons/github.svg" alt="Github"></a>
                 <a class="social-icon" href="mailto:nl12@williams.edu" ><img src="Icons/at-sign.svg" alt="Mail"></a>
-                <a class="social-icon" href="https://dribbble.com/vyshnav_" ><img src="Icons/dribbble.svg" alt="Dribbble"></a>
+                <!--<a class="social-icon" href="https://dribbble.com/vyshnav_" ><img src="Icons/dribbble.svg" alt="Dribbble"></a>-->
                 <a class="social-icon" href="https://instagram.com/_nawon" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
