--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
                 <button type="button" class="btn btn-outline-dark">Download Resume</button>
+                <button>Button</button>
+                <button style="--c:#E95A49">Button</button>
                 <button class="button-62" role="button">#courses taken</button>
     </div>
 </div>
