--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button style="--c:#E95A49">Button</button>
                 <button class="button-62" role="button">#courses taken</button> -->
                 <div class="relative w-screen h-screen flex items-center justify-center">
-<div class="relative container mx-auto flex flex-wrap justify-between gap-y-2 h-96 w-60 mb-8 text-xl bg-black">
+<div class="relative container mx-auto flex flex-wrap justify-between gap-y-2 h-96 w-60 mb-8 text-xl bg-white">
 	
 	
 	<button class="w-44 h-12 bg-yellow-600 rounded-full"></button>
