--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
-                <button type="button" class="btn btn-outline-dark">Download Resume</button>
-                <button>Button</button>
-                <button style="--c:#E95A49">Button</button>
-                <button class="button-62" role="button">#courses taken</button> -->
-                <div class="relative w-screen h-screen flex items-center justify-center">
-<div class="relative container mx-auto flex flex-wrap justify-between gap-y-2 h-96 w-60 mb-8 text-xl bg-white">
+                <!--<button type="button" class="btn btn-outline-dark">Download Resume</button>-->
+                <!--<button>Button</button>-->
+                <!--<button style="--c:#E95A49">Button</button>-->
+                <!--<button class="button-62" role="button">#courses taken</button> -->
+		</div>
+	</div>
+	</div>
+	</div>
+		
+        <div class="relative w-screen h-screen flex items-center justify-center">
+	<div class="relative container mx-auto flex flex-wrap justify-between gap-y-2 h-96 w-60 mb-8 text-xl bg-white">
 	
 	
 	<button class="w-44 h-12 bg-yellow-600 rounded-full"></button>
@@ -95,20 +100,13 @@
 	<button class="w-12 h-12 border-4 border-yellow-600 text-yellow-600 rounded-full bg-anim duration-1"></button>
 	
 	
-</div>
+	</div>
 	<div class="absolute text-gray-500 bottom-4 right-4">
 		Design by <a href="https://readymag.com/about">Readymag</a> team
 	</div>
-</div>
-    </div>
-</div>
-</div>
-</div>
-    
+	</div>
 
-
-
-    
+  
 </body>
 
 
