--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
                 <!--<button type="button" class="btn btn-outline-dark">Download Resume</button>-->
-                <button class="button-19" role="button">Button 19</button>
-                <!--<button class="button-62" role="button">#courses taken</button> -->
+                <button class="button-59" role="button">#courses I've taken</button>
 		</div>
 	</div>
 	</div>
