--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
                 <!--<button type="button" class="btn btn-outline-dark">Download Resume</button>-->
                 <button class="button-59" role="button">#courses I've taken</button>
-		<button class="button-59" role="button">#click on hashtags!</button>
+		<button class="button-59" role="button">#CLICK ON HASHTAGS</button>
 		<button class="button-59" role="button">#download resume</button>
 		<button class="button-59" role="button">#life timeline</button>
 		</div>
