--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button class="button-59" role="button">#courses I've taken</button>
 		<button class="button-59" role="button">#download resume</button>
 		<button class="button-59" role="button">#life timeline</button>
+		<button class="button-59" role="button">#publications</button>
 		</div>
 	</div>
 	</div>
