--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                 <a class="social-icon" href="https://instagram.com/_nawon" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
-                <!-- <button type="button" class="btn btn-outline-dark">Courses I've Taken</button> -->
-                <!--<button type="button" class="btn btn-outline-dark">Download Resume</button>-->
+                <<button type="button" class="btn btn-outline-dark">Download Resume</button>
                 <button class="button-59" role="button">#courses I've taken</button>
-		<button class="button-59" role="button">#download resume</button>
 		<button class="button-59" role="button">#life timeline</button>
 		<button class="button-59" role="button">#publications</button>
 		</div>
