--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="social-icon" href="https://instagram.com/_nawon" ><img src="Icons/instagram.svg" alt="Instagram"></a>
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
-                <<button type="button" class="btn btn-outline-dark">Download Resume</button>
+                <button type="button" class="btn btn-outline-dark">Download Resume</button>
                 <button class="button-59" role="button">#courses I've taken</button>
 		<button class="button-59" role="button">#life timeline</button>
 		<button class="button-59" role="button">#publications</button>
