--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- <button type="button" class="btn btn-outline-dark">Download Resume</button> -->
 		<button class="button-59" role="button">#life timeline</button>
 		<button class="button-59" role="button">#download resume</button>
-		<button type="button-59" onclick="window.open('file.doc')">#download resume</button>
+		<button type="button-59" onclick="window.open('resume.png')">#download resume</button>
                 <button class="button-59" role="button">#courses I've taken</button>
 		<button class="button-59" role="button">#publications</button>
 		</div>
