--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Download Resume</button> -->
 		<button class="button-59" role="button">#life timeline</button>
-		<button class="button-59" role="button" onclick="window.open('resume.png')">#view resume</button>
+		<button class="button-59" role="button" onclick="window.open("https://drive.google.com/file/d/1EGTkzVpz2EAIkpO8gb05VF9pljm_d1RU/view?usp=sharing")">#view resume</button>
                 <button class="button-59" role="button">#courses I've taken</button>
 		<button class="button-59" role="button">#publications</button>
 		</div>
