--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/1EGTkzVpz2EAIkpO8gb05VF9pljm_d1RU/view?usp=sharing')">#view resume</button>
                 <button class="button-59" role="button">#courses I've taken</button>
 		<button class="button-59" role="button">#publications</button>
+		<button class="button-59" role="button">#hobbies and interests</button>
 		</div>
 	</div>
 	</div>
