--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Nawon Lee</h1>
                 <span class="text description">
                     Class of '24 @Williams College 
-                    <br>B.A. in Computer Science, Biology
+                    <br>B.A. in Biology, Computer Science
                 </span>
                 <span class="text small-heading">FOLLOW ME ON</span>
                 <div class="icons d-flex justify-content-center justify-content-md-end">
