--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- <button type="button" class="btn btn-outline-dark">Download Resume</button> -->
 		<button class="button-59" role="button">#life timeline</button>
 		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/1C-CHN7eWVkWtRmnOTHzTRWMY0Nk155q9/view?usp=sharing')">#view resume</button>
-                <button class="button-59" role="button">#courses I've taken</button>
+                <button class="button-59" role="button" onclick="window.open('https://24nl12.github.io/courses/about.html')">#courses I've taken</button>
 		<button class="button-59" role="button">#publications</button>
 		<button class="button-59" role="button">#hobbies and interests</button>
 		</div>
