--- a/courses.html
+++ b/courses.html
@@ -1,1 +1,42 @@
+<html>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Courses I've Taken</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+</head>
+
+<body>
+
+  <div class="background d-none d-md-block"></div>
+    <div class="container height-100">
+    <div class="row height-100">
+    <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
+        <div class="content text-center text-md-right ">
+                <h1>Courses I've Taken</h1>
+                <span class="text description">
+                    Class of '24 @Williams College 
+                    <br>B.A. in Biology, Computer Science
+                </span>
+                <span class="text small-heading">2023 FALL</span>
+                
+                <span class="text small-heading">2023 SPRING</span>
+                <span class="text small-heading">2022 FALL</span>
+                <span class="text small-heading">2022 SPRING</span>
+                <span class="text small-heading">2021 FALL</span>
+                <span class="text small-heading">2021 SPRING</span>
+                <span class="text small-heading">2020 FALL</span>
+		</div>
+	</div>
+	</div>
+	</div>
+
+  
+</body>
+
+
+</html>
