--- a/courses.html
+++ b/courses.html
@@ -17,7 +17,7 @@
     <div class="row height-100">
     <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
         <div class="content text-center text-md-right ">
-                <h1>Courses I've Taken</h1>
+                <h1>Courses</h1>
                 <span class="text description">
                     Class of '24 @Williams College 
                     <br>B.A. in Biology, Computer Science
@@ -25,6 +25,7 @@
                 <span class="text small-heading">2023 FALL</span>
                 
                 <span class="text small-heading">2023 SPRING</span>
+		
                 <span class="text small-heading">2022 FALL</span>
                 <span class="text small-heading">2022 SPRING</span>
                 <span class="text small-heading">2021 FALL</span>
