--- a/courses.html
+++ b/courses.html
@@ -23,7 +23,7 @@
                     <br>B.A. in Biology, Computer Science
                 </span>
                 <span class="text small-heading">2023 FALL</span>
-                
+                <span class="text body"> CSCI </span>
                 <span class="text small-heading">2023 SPRING</span>
 		
                 <span class="text small-heading">2022 FALL</span>
