--- a/courses.html
+++ b/courses.html
@@ -23,14 +23,51 @@
                     <br>B.A. in Biology, Computer Science
                 </span>
                 <span class="text small-heading">2023 FALL</span>
-                <span class="text body"> CSCI </span>
+                <span class="text body"> CSCI 237: Computer Organization
+		ECON 252: Macroeconomics
+		ENGL 254: Catastrophe/ Apocalypse
+		BIOL 436: Metabolite as Messengers </span>
+		
                 <span class="text small-heading">2023 SPRING</span>
+		<span class="text body"> CSCI 375: Natural Language Processing
+		CSCI 334: Principles of Programming Languages
+		PHYS 132: Electromagnetics & Physics of Matter
+		COMP 244: Black Mediterranean </span>
 		
                 <span class="text small-heading">2022 FALL</span>
+		<span class="text body"> CSCI 361: Theory of Computation
+		PSYC 242: Social Psychology
+		BIOL 212: Neuroscience
+		CHEM 251: Organic Chemistry, Intermed Level 
+		 </span>
+		
                 <span class="text small-heading">2022 SPRING</span>
+		<span class="text body"> BIOL 222: Essentials of Biochemistry
+		BIOL 305: Evolution
+		MUS 166: Beethoven
+		STAT 202: Intro to Statistical Modeling
+		</span>
+		
                 <span class="text small-heading">2021 FALL</span>
+		<span class="text body"> CSCI 256: Algorithm Design & Analysis
+		ECON 251: Price and Allocation Theory
+		BIOL 202: Genetics
+		COMP 111: Nature of Narrative 
+		</span>
+		
                 <span class="text small-heading">2021 SPRING</span>
+		<span class="text body"> CSCI 136: Data Structures & Advanced Programming
+		CHEM 156: Organic Chemistry, Intro Level
+		BIOL 102: The Organism
+		</span>
+		
                 <span class="text small-heading">2020 FALL</span>
+		<span class="text body"> STS 243: Epidemics, Medicine and Power
+		MATH 200: Discrete Math
+		MUS 281: Jazz Piano
+		CHEM 155: Principles of Modern Chemistry
+		BIOL 101: The Cell
+		</span>
 		</div>
 	</div>
 	</div>
