--- a/courses.html
+++ b/courses.html
@@ -23,49 +23,49 @@
                     <br>B.A. in Biology, Computer Science
                 </span>
                 <span class="text small-heading">2023 FALL</span>
-                <span class="text body"> CSCI 237: Computer Organization
-		ECON 252: Macroeconomics
-		ENGL 254: Catastrophe/ Apocalypse
+                <span class="text body"> CSCI 237: Computer Organization <br>
+		ECON 252: Macroeconomics <br>
+		ENGL 254: Catastrophe/ Apocalypse <br>
 		BIOL 436: Metabolite as Messengers </span>
 		
                 <span class="text small-heading">2023 SPRING</span>
-		<span class="text body"> CSCI 375: Natural Language Processing
-		CSCI 334: Principles of Programming Languages
-		PHYS 132: Electromagnetics & Physics of Matter
+		<span class="text body"> CSCI 375: Natural Language Processing <br>
+		CSCI 334: Principles of Programming Languages <br>
+		PHYS 132: Electromagnetics & Physics of Matter <br>
 		COMP 244: Black Mediterranean </span>
 		
                 <span class="text small-heading">2022 FALL</span>
-		<span class="text body"> CSCI 361: Theory of Computation
-		PSYC 242: Social Psychology
-		BIOL 212: Neuroscience
+		<span class="text body"> CSCI 361: Theory of Computations <br>
+		PSYC 242: Social Psychology <br>
+		BIOL 212: Neuroscience <br>
 		CHEM 251: Organic Chemistry, Intermed Level 
 		 </span>
 		
                 <span class="text small-heading">2022 SPRING</span>
-		<span class="text body"> BIOL 222: Essentials of Biochemistry
-		BIOL 305: Evolution
-		MUS 166: Beethoven
-		STAT 202: Intro to Statistical Modeling
+		<span class="text body"> BIOL 222: Essentials of Biochemistry <br>
+		BIOL 305: Evolution <br>
+		MUS 166: Beethoven <br>
+		STAT 202: Intro to Statistical Modeling <br>
 		</span>
 		
                 <span class="text small-heading">2021 FALL</span>
-		<span class="text body"> CSCI 256: Algorithm Design & Analysis
-		ECON 251: Price and Allocation Theory
-		BIOL 202: Genetics
-		COMP 111: Nature of Narrative 
+		<span class="text body"> CSCI 256: Algorithm Design & Analysis <br>
+		ECON 251: Price and Allocation Theory <br>
+		BIOL 202: Genetics <br>
+		COMP 111: Nature of Narrative <br>
 		</span>
 		
                 <span class="text small-heading">2021 SPRING</span>
-		<span class="text body"> CSCI 136: Data Structures & Advanced Programming
-		CHEM 156: Organic Chemistry, Intro Level
-		BIOL 102: The Organism
+		<span class="text body"> CSCI 136: Data Structures & Advanced Programming <br>
+		CHEM 156: Organic Chemistry, Intro Level <br>
+		BIOL 102: The Organism <br>
 		</span>
 		
                 <span class="text small-heading">2020 FALL</span>
-		<span class="text body"> STS 243: Epidemics, Medicine and Power
-		MATH 200: Discrete Math
-		MUS 281: Jazz Piano
-		CHEM 155: Principles of Modern Chemistry
+		<span class="text body"> STS 243: Epidemics, Medicine and Power <br>
+		MATH 200: Discrete Math <br>
+		MUS 281: Jazz Piano <br>
+		CHEM 155: Principles of Modern Chemistry <br>
 		BIOL 101: The Cell
 		</span>
 		</div>
