--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
 		PHYS 132: Electromagnetics & Physics of Matter <br>
 		COMP 244: Black Mediterranean </span>
 	</div>
-	<div class="col-6">
+	<div class="col">
                 <span class="text small-heading">2022 FALL</span>
 		<span class="text body"> CSCI 361: Theory of Computations <br>
 		PSYC 242: Social Psychology <br>
