--- a/courses.html
+++ b/courses.html
@@ -15,7 +15,7 @@
   <div class="background d-none d-md-block"></div>
     <div class="container height-100">
     <div class="row height-100">
-    <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
+    <div class="col">
         <div class="content text-center text-md-right ">
                 <h1>Courses</h1>
                 <span class="text description">
@@ -34,7 +34,7 @@
 		PHYS 132: Electromagnetics & Physics of Matter <br>
 		COMP 244: Black Mediterranean </span>
 	</div>
-	<div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
+	<div class="col">
                 <span class="text small-heading">2022 FALL</span>
 		<span class="text body"> CSCI 361: Theory of Computations <br>
 		PSYC 242: Social Psychology <br>
