--- a/courses.html
+++ b/courses.html
@@ -34,6 +34,8 @@
 		PHYS 132: Electromagnetics & Physics of Matter <br>
 		COMP 244: Black Mediterranean </span>
 	</div>
+    </div>
+	    <div class="row height-100">
 	<div class="col">
                 <span class="text small-heading">2022 FALL</span>
 		<span class="text body"> CSCI 361: Theory of Computations <br>
