--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
 		BIOL 212: Neuroscience <br>
 		CHEM 251: Organic Chemistry, Intermed Level 
 		 </span>
-		
+	<div class="col">
                 <span class="text small-heading">2022 SPRING</span>
 		<span class="text body"> BIOL 222: Essentials of Biochemistry <br>
 		BIOL 305: Evolution <br>
@@ -67,6 +67,7 @@
 		CHEM 155: Principles of Modern Chemistry <br>
 		BIOL 101: The Cell
 		</span>
+	</div>
 	</div>
 	</div>
 
