--- a/courses.html
+++ b/courses.html
@@ -14,6 +14,7 @@
 
   <div class="background d-none d-md-block"></div>
     <div class="container height-100">
+	<div class="content text-center text-md-left ">
     <div class="row height-100">
     <div class="col">
                 <h1>Courses</h1>
@@ -68,6 +69,7 @@
 		CHEM 155: Principles of Modern Chemistry <br>
 		BIOL 101: The Cell
 		</span>
+	</div>
 	</div>
 	</div>
 	</div>
