--- a/courses.html
+++ b/courses.html
@@ -17,7 +17,7 @@
 	<div class="content text-center text-md-left ">
     <div class="row height-100">
     <div class="col">
-                <h1>Courses</h1>
+                <h1 style="padding:20px">Courses</h1>
                 <span class="text description">
                     Class of '24 @Williams College 
                     <br>B.A. in Biology, Computer Science
