--- a/courses.html
+++ b/courses.html
@@ -17,7 +17,10 @@
 	<div class="content text-center text-md-left ">
     <div class="row height-100">
     <div class="col">
-                <h1 style="padding:top=120px">Courses</h1>
+	    <br>
+	    <br>
+	    <br>
+                <h1>Courses</h1>
                 <span class="text description">
                     Class of '24 @Williams College 
                     <br>B.A. in Biology, Computer Science
@@ -42,6 +45,9 @@
 		 </span>
 	    </div>
 	<div class="col">
+	<br>
+	    <br>
+	    <br>
                 <span class="text small-heading">2022 SPRING</span>
 		<span class="text body"> BIOL 222: Essentials of Biochemistry <br>
 		BIOL 305: Evolution <br>
