--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
 
   <div class="background d-none d-md-block"></div>
     <div class="container height-100">
-	<div class="content text-center text-md-left ">
+	<div class="content text-md-left ">
     <div class="row height-100">
     <div class="col">
 	    <br>
