--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </div>
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Download Resume</button> -->
-		<button class="button-59" role="button">#life timeline</button>
+		<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#life timeline</button>
 		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/1C-CHN7eWVkWtRmnOTHzTRWMY0Nk155q9/view?usp=sharing')">#view resume</button>
                 <button class="button-59" role="button" onclick="window.location.href = 'courses.html';">#courses I've taken</button>
-		<button class="button-59" role="button">#publications</button>
-		<button class="button-59" role="button">#hobbies and interests</button>
+		<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#publications</button>
+		<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#hobbies and interests</button>
 		</div>
 	</div>
 	</div>
