--- a/incomplete.html
+++ b/incomplete.html
@@ -1,1 +1,32 @@
-<img src="Icons/warning-sign_26a0" alt="Warning Sign">
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nawon Lee</title>
+    <link rel="shortcut icon" type="image/jpeg" href="Images/IMG_8196.jpeg">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+</head>
+
+<body>
+
+  <div class="background d-none d-md-block"></div>
+    <div class="container height-100">
+    <div class="row height-100">
+    <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
+        <div class="content text-center text-md-right ">
+            <img class="logo" src="Icons/warning-sign_26a0" alt="Warning Sign" style='height: 274px; width: auto; object-fit: cover'/> 
+                <h1>Sorry, this website is still under construction.</h1>
+		</div>
+	</div>
+	</div>
+	</div>
+
+  
+</body>
+
+
+</html>
+
