--- a/incomplete.html
+++ b/incomplete.html
@@ -17,7 +17,7 @@
     <div class="row height-100">
     <div class="col col-md-6 col-lg-5 col-12 height-100 d-flex align-items-md-center blurbg">
         <div class="content text-center text-md-right ">
-            <img class="logo" src="Icons/warning-sign_26a0" alt="Warning Sign" style='height: 274px; width: auto; object-fit: cover'/> 
+            <img class="logo" src="Images/warning-sign_26a0" alt="Warning Sign" style='height: 274px; width: auto; object-fit: cover'/> 
                 <h1>Sorry, this website is still under construction.</h1>
 		</div>
 	</div>
