--- a/courses.html
+++ b/courses.html
@@ -25,6 +25,20 @@
                     Class of '24 @Williams College 
                     <br>B.A. in Biology, Computer Science
                 </span>
+	    	<span class="text small-heading">2024 SPRING</span>
+		<span class="text body"> CSCI 379: Causal Inference <br>
+		CSCI 378: Human AI Interaction <br>
+		BIOL 314: Neuroethology <br>
+		ECON 284: Corporate Finance <br>
+		MUS 282: Jazz Vocal </span>
+	    
+		<span class="text small-heading">2024 FALL</span>
+		<span class="text body"> CSCI 237: Computer Organization <br>
+		ECON 252: Macroeconomics <br>
+		BIOL 436: Metabolites as Messengers <br>
+		ENGL 254: Apocalypse/ Catastrophe: The Movie <br>
+		MUS 281: Jazz Vocal </span>
+	    
                 <span class="text small-heading">2023 FALL</span>
                 <span class="text body"> CSCI 237: Computer Organization <br>
 		ECON 252: Macroeconomics <br>
