--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="text small-heading">EXPLORE MY WORK</span>
                 <!-- <button type="button" class="btn btn-outline-dark">Download Resume</button> -->
 		<!--<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#life timeline</button>-->
-		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/19LLQMC4-Hlojc_b1CA9WVPR6RKmwkC9b/view?usp=sharing')">#view resume</button>
+		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/1-FIffGBzZWz2xkI_auOjBIU_38j23LvD/view?usp=drive_link')">#view resume</button>
                 <button class="button-59" role="button" onclick="window.location.href = 'courses.html';">#courses I've taken</button>
 		<!--<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#publications</button>-->
 		<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#hobbies and interests</button>
