--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<button class="button-59" role="button" onclick="window.open('https://drive.google.com/file/d/1-FIffGBzZWz2xkI_auOjBIU_38j23LvD/view?usp=drive_link')">#view resume</button>
                 <button class="button-59" role="button" onclick="window.location.href = 'courses.html';">#courses I've taken</button>
 		<!--<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#publications</button>-->
-		<button class="button-59" role="button" onclick="window.location.href = 'incomplete.html';">#hobbies and interests</button>
+		<button class="button-59" role="button" onclick="window.location.href = 'hobbies.html';">#hobbies and interests</button>
 		</div>
 	</div>
 	</div>
