--- a/hobbies.html
+++ b/hobbies.html
@@ -112,17 +112,17 @@
       <div class="slides" id="slides">
         <!-- Slide 1 -->
         <div class="slide">
-          <img src="Images/hobby1.jpg" alt="Hobby 1">
+          <img src="Images/frisbee.jpg" alt="Hobby 1">
           <div class="caption">Playing guitar on lazy weekends</div>
         </div>
         <!-- Slide 2 -->
         <div class="slide">
-          <img src="Images/hobby2.jpg" alt="Hobby 2">
+          <img src="Images/golf.jpg" alt="Hobby 2">
           <div class="caption">Hiking with friends</div>
         </div>
         <!-- Slide 3 -->
         <div class="slide">
-          <img src="Images/hobby3.jpg" alt="Hobby 3">
+          <img src="Images/cooking.jpg" alt="Hobby 3">
           <div class="caption">Cooking homemade ramen</div>
         </div>
         <!-- Add more slides as needed -->
