--- a/courses.html
+++ b/courses.html
@@ -122,17 +122,17 @@
         <!-- Slide 1 -->
         <div class="slide">
           <img src="Images/frisbee.jpg" alt="Hobby 1">
-          <div class="caption">Playing guitar</div>
+          <div class="caption">I played for Williams NOVA Ultimate Frisbee for 3 years! I still enjoy going to pickup games on the beach in Cape Cod or at the parks in Cambridge. </div>
         </div>
         <!-- Slide 2 -->
         <div class="slide">
           <img src="Images/golf.jpg" alt="Hobby 2">
-          <div class="caption">Hiking in nature</div>
+          <div class="caption">I started golfing since I was 10, because it was a family activity growing up. I never really liked it until I got older- now I see how it's one of the best ways to bond with people while playing sports and appreciating beautiful nature!</div>
         </div>
         <!-- Slide 3 -->
         <div class="slide">
           <img src="Images/cooking.jpg" alt="Hobby 3">
-          <div class="caption">Cooking ramen</div>
+          <div class="caption">Cooking is a new hobby I picked up after college. It became a creative outlet for me and an enjoyment for after work. I like to make cultural fusion dishes! Follow Reed and I's food instagram @leekendallcooks.</div>
       </div>
 
       <!-- Navigation Arrows -->
